--- a/style.css
+++ b/style.css
@@ -63,3 +63,9 @@ body{
     background-color: black;    
     color:#1d800ae7;                          
 }
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
